syntax = "proto3";

package car;

// ***************************************************** SERVICES ******************************************************
service CarService {
  rpc ListCars(ListCarsRequest) returns (ListCarsResponse) {}
  rpc GetCar(GetCarRequest) returns (GetCarResponse) {}
  rpc CreateCar(CreateCarRequest) returns (CreateCarResponse) {}
  rpc UpdateCar(UpdateCarRequest) returns (UpdateCarResponse) {}
  rpc DeleteCar(DeleteCarRequest) returns (DeleteCarResponse) {}
}
// *********************************************************************************************************************

// ******************************************************* MESSAGES ****************************************************
message Car {
  int32 carId = 1;
  string model = 2;
  string brand = 3;
}
// *********************************************************************************************************************

// ********************************************* REQUESTS / RESONSES ***************************************************
message ListCarsRequest {}
message ListCarsResponse {
  repeated Car cars = 1;
}

message GetCarRequest {
  int32 carId = 1;
}
message GetCarResponse {
  Car car = 1;
}

message CreateCarRequest {
  string model = 1;
  string brand = 2;
}
message CreateCarResponse {
  Car car  = 1;
}

message UpdateCarRequest {
  Car car = 1;
}
message UpdateCarResponse {
  Car car  = 1;
}

message DeleteCarRequest {
  int32 carId = 1;
}
message DeleteCarResponse {
  Car car  = 1;
}
// *********************************************************************************************************************
